fix(layout): mobile layout was too small

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   transition: all 0.3s ease;
+  overflow: scroll;
 }
 
 .todo.sedang {
@@ -31,6 +32,21 @@ body > main > footer {
   text-align: center;
 }
 
-body > main {
+/* body > main { */
   /* border: 1px solid red; */
-}
+/* } */
+
+/* @media (max-width: 720px) { */
+/*     body { */
+/*         font-size: 12px; */
+/*         padding: 5px; */
+/*         background-color: red; */
+/*     } */
+/**/
+/*     .todo { */
+/*         font-size: 10px; */
+/*         padding: 5px; */
+/*         margin-bottom: 5px; */
+/*         border: 1px solid red; */
+/*     } */
+/* } */
